Add GenUsage and GenDesignNotes
Instead of generating usage and design notes when the catalog is re-index,
this splits the work into three workflows:

1. gen-catalog
2. gen-design-notes
3. gen-usage

gen-catalog runs daily but only does the catalog and suffix tree.

gen-design-notes runs twice a weeek after our review sessions uploads the
binary blob.

gen-usage runs every six hours and uses jobs to for both Planner and NuGet.
There is a dependent job that aggregates the result into the single usage
blob that is then uploaded.

Each of those no has a separate web hook URL and notifies the site that new
data is available.

--- a/.github/workflows/gen-design-notes.yml
+++ b/.github/workflows/gen-design-notes.yml
@@ -1,9 +1,9 @@
-name: Generate Usage NuGet
+name: Generate Design Notes
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '21 */6 * * *' # At :21 in every 6th hour
+    - cron: '5 21 * * 2,4' # At 2:05 PM PT Tuesday and Thursday
 
 env:
   DOTNET_NOLOGO: true
@@ -23,9 +23,11 @@ jobs:
       with:
         dotnet-version: '8.0.*'
 
-    - name: Generate usage
+    - name: Generate design notes
       env:
         AzureStorageConnectionString: ${{ secrets.AZURE_STORAGE_CONNECTION_STRING }}
+        GenCatalogWebHookUrl: ${{ secrets.GEN_DESIGN_NOTES_WEB_HOOK_URL }}
+        GenCatalogWebHookSecret: ${{ secrets.GEN_CATALOG_WEB_HOOK_SECRET }}
       run: |
-        cd ./src/GenUsageNuGet
-        dotnet run -- crawl
+        cd ./src/GenDesignNotes
+        dotnet run -- .
