Reduce log noise

--- a/src/apisof.net/appsettings.json
+++ b/src/apisof.net/appsettings.json
@@ -1,9 +1,12 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Warning",
+      "ApisOfDotNet": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "System.Net.Http.HttpClient.SourceResolverService": "Warning",
+      "System.Net.Http.HttpClient.DocumentationResolverService": "Warning",
     }
   },
   "AllowedHosts": "*"
