--- a/src/GenUsageNuGet/GenUsageNuGet.csproj
+++ b/src/GenUsageNuGet/GenUsageNuGet.csproj
@@ -18,6 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\Terrajobst.ApiCatalog.ActionsRunner\Terrajobst.ApiCatalog.ActionsRunner.csproj" />
         <ProjectReference Include="..\Terrajobst.ApiCatalog\Terrajobst.ApiCatalog.csproj" />
         <ProjectReference Include="..\Terrajobst.UsageCrawling\Terrajobst.UsageCrawling.csproj" />
         <ProjectReference Include="..\Terrajobst.UsageCrawling.Storage\Terrajobst.UsageCrawling.Storage.csproj" />
