--- a/.github/workflows/gen-catalog.yml
+++ b/.github/workflows/gen-catalog.yml
@@ -29,4 +29,4 @@ jobs:
         GenCatalogWebHookSecret: ${{ secrets.GEN_CATALOG_WEB_HOOK_SECRET }}
       run: |
         cd ./src/GenCatalog
-        dotnet run -- .
+        dotnet run
