--- a/.github/workflows/gen-design-notes.yml
+++ b/.github/workflows/gen-design-notes.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Generate design notes
       env:
         AzureStorageConnectionString: ${{ secrets.AZURE_STORAGE_CONNECTION_STRING }}
-        GenCatalogWebHookSecret: ${{ secrets.GEN_CATALOG_WEB_HOOK_SECRET }}
+        ApisOfDotNetWebHookSecret: ${{ secrets.APISOFDOTNET_WEB_HOOK_SECRET }}
       run: |
         cd ./src/GenDesignNotes
         dotnet run
