Add a summary table to GenUsage and GenDesignNotes

--- a/src/Terrajobst.ApiCatalog.ActionsRunner/Terrajobst.ApiCatalog.ActionsRunner.csproj
+++ b/src/Terrajobst.ApiCatalog.ActionsRunner/Terrajobst.ApiCatalog.ActionsRunner.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="Azure.Storage.Blobs" />
+      <PackageReference Include="Humanizer.Core" />
       <PackageReference Include="Microsoft.Extensions.Hosting" />
       <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" />
       <PackageReference Include="Mono.Options" />
