--- a/src/apisof.net/apisof.net.csproj
+++ b/src/apisof.net/apisof.net.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" />
     <PackageReference Include="Humanizer.Core" />
+    <PackageReference Include="Markdig" />
     <PackageReference Include="Toolbelt.Blazor.HotKeys2" />
   </ItemGroup>
 
