Add AzureBlobClientManager for centralized blob access
Introduces AzureBlobClientManager to manage Azure Blob Storage clients using Azure.Identity credentials. Updates CatalogService to use the new manager for blob access, refactors blob source creation, and registers the manager as a singleton. Adds Azure.Identity package and configuration for blob storage URI.

--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -4,6 +4,7 @@
     <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
   </PropertyGroup>
   <ItemGroup>
+    <PackageVersion Include="Azure.Identity" Version="1.17.0" />
     <PackageVersion Include="Azure.Storage.Blobs" Version="12.23.0" />
     <PackageVersion Include="Basic.Reference.Assemblies.Net472" Version="1.7.9" />
     <PackageVersion Include="Basic.Reference.Assemblies.Net80" Version="1.7.9" />
