--- a/src/apisof.net/appsettings.json
+++ b/src/apisof.net/appsettings.json
@@ -6,8 +6,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information",
       "System.Net.Http.HttpClient.SourceResolverService": "Warning",
-      "System.Net.Http.HttpClient.DocumentationResolverService": "Warning",
+      "System.Net.Http.HttpClient.DocumentationResolverService": "Warning"
     }
   },
+  "AzureBlobStorageUri": "https://dotnetstoragedev.blob.core.windows.net",
   "AllowedHosts": "*"
 }
