--- a/src/apisof.net/apisof.net.csproj
+++ b/src/apisof.net/apisof.net.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Identity" />
     <PackageReference Include="Azure.Storage.Blobs" />
     <PackageReference Include="Humanizer.Core" />
     <PackageReference Include="Markdig" />
