Refactor to use AzureBlobClientManager for blob storage
Replaces direct Azure Blob client instantiation with the shared AzureBlobClientManager across multiple projects for improved consistency and dependency injection. Updates constructors and service registrations to inject AzureBlobClientManager. Refactors blob access logic in NetUpgradePlannerTelemetry, ActionsRunner, apisof.net, and apisofdotnet to use the new manager. Also updates related project references and dependency injection setup.

--- a/src/Terrajobst.ApiCatalog.ActionsRunner/Terrajobst.ApiCatalog.ActionsRunner.csproj
+++ b/src/Terrajobst.ApiCatalog.ActionsRunner/Terrajobst.ApiCatalog.ActionsRunner.csproj
@@ -16,4 +16,8 @@
       <PackageReference Include="Serilog.Sinks.File" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\apisof.net\apisof.net.csproj" />
+    </ItemGroup>
+
 </Project>
