--- a/src/NetUpgradePlannerTelemetry/NetUpgradePlannerTelemetry.csproj
+++ b/src/NetUpgradePlannerTelemetry/NetUpgradePlannerTelemetry.csproj
@@ -16,6 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\apisof.net\apisof.net.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
