--- a/src/nuget.config
+++ b/src/nuget.config
@@ -2,6 +2,6 @@
 <configuration>
   <packageSources>
     <clear />
-    <add key="dotnetlegacy@Local" value="https://devdiv.pkgs.visualstudio.com/OnlineServices/_packaging/dotnetlegacy%40Local/nuget/v3/index.json" />
+    <add key="dotnetlegacy" value="https://devdiv.pkgs.visualstudio.com/OnlineServices/_packaging/dotnetlegacy/nuget/v3/index.json" />
   </packageSources>
 </configuration>
