Explicit reference of package to projects

--- a/pipelines/build-pipeline.yml
+++ b/pipelines/build-pipeline.yml
@@ -74,7 +74,7 @@ extends:
                 inputs:
                   command: test
                   projects: '**/*Tests*.csproj'
-                  arguments: --configuration $(BuildConfiguration) --no-build"
+                  arguments: --configuration $(BuildConfiguration) --no-build
               - task: DotNetCoreCLI@2
                 displayName: Publish Web Application
                 inputs:
