--- a/src/Terrajobst.UsageCrawling.Storage.Tests/Terrajobst.UsageCrawling.Storage.Tests.csproj
+++ b/src/Terrajobst.UsageCrawling.Storage.Tests/Terrajobst.UsageCrawling.Storage.Tests.csproj
@@ -12,6 +12,11 @@
     <ItemGroup>
         <PackageReference Include="Dapper" />
         <PackageReference Include="Microsoft.Data.Sqlite" />
+        <PackageReference Include="xunit" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" />
+        <PackageReference Include="xunit.runner.visualstudio" />
+        <PackageReference Include="coverlet.collector" />
+        <PackageReference Include="Meziantou.Xunit.ParallelTestFramework" />
     </ItemGroup>
 
     <ItemGroup>
