--- a/src/Terrajobst.UsageCrawling.Tests/Terrajobst.UsageCrawling.Tests.csproj
+++ b/src/Terrajobst.UsageCrawling.Tests/Terrajobst.UsageCrawling.Tests.csproj
@@ -15,6 +15,11 @@
         <PackageReference Include="Basic.Reference.Assemblies.NetStandard13" />
         <PackageReference Include="Basic.Reference.Assemblies.NetStandard20" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" />
+        <PackageReference Include="xunit" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" />
+        <PackageReference Include="xunit.runner.visualstudio" />
+        <PackageReference Include="coverlet.collector" />
+        <PackageReference Include="Meziantou.Xunit.ParallelTestFramework" />
     </ItemGroup>
 
     <ItemGroup>
