Refine test project package management and configuration
Introduces the ExplicitTestPackages property to test projects and updates Directory.Build.targets to conditionally include test-related packages and content. Test project .csproj files now explicitly declare test dependencies with appropriate IncludeAssets and PrivateAssets, improving clarity and control over test package references.

--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -1,7 +1,7 @@
 <Project>
 
     <ItemGroup Label="Testing"
-               Condition="$(IsTestProject)">
+               Condition="$(IsTestProject) and '$(ExplicitTestPackages)' != 'true'">
         <Content Include="$(MSBuildThisFileDirectory)xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
         <PackageReference Include="coverlet.collector">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
