--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -40,7 +40,8 @@
     <PackageVersion Include="SharpVectors.Wpf" Version="1.8.4.2" />
     <PackageVersion Include="Spectre.Console" Version="0.49.1" />
     <PackageVersion Include="Toolbelt.Blazor.HotKeys2" Version="5.1.0" />
-    <PackageVersion Include="xunit" Version="2.4.2" />
+    <PackageVersion Include="xunit" Version="2.4.2-pre.22" />
+    <PackageVersion Include="xunit.extensibility.execution" Version="2.4.2-pre.22" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="2.4.2" />
   </ItemGroup>
   <ItemGroup Label="Transitive Updates">
