Update xunit packages and configure NuGet source mapping
Upgraded xunit and xunit.runner.visualstudio package versions and removed xunit.extensibility.execution from test projects. Added package source mapping for Microsoft.Cci.Extensions in nuget.config to ensure correct package source usage.

--- a/src/nuget.config
+++ b/src/nuget.config
@@ -4,4 +4,10 @@
     <clear />
     <add key="dotnetlegacy" value="https://devdiv.pkgs.visualstudio.com/OnlineServices/_packaging/dotnetlegacy/nuget/v3/index.json" />
   </packageSources>
+
+  <packageSourceMapping>
+    <packageSource key="dotnetlegacy">
+      <package pattern="Microsoft.Cci.Extensions" />
+    </packageSource> 
+  </packageSourceMapping>
 </configuration>
