--- a/src/Terrajobst.UsageCrawling.Tests/Terrajobst.UsageCrawling.Tests.csproj
+++ b/src/Terrajobst.UsageCrawling.Tests/Terrajobst.UsageCrawling.Tests.csproj
@@ -16,12 +16,13 @@
         <PackageReference Include="Basic.Reference.Assemblies.NetStandard13" />
         <PackageReference Include="Basic.Reference.Assemblies.NetStandard20" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" />
-         <PackageReference Include="coverlet.collector">
+        <PackageReference Include="coverlet.collector">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.NET.Test.Sdk" />
-        <PackageReference Include="xunit" /> 
+        <PackageReference Include="xunit" />
+        <PackageReference Include="xunit.extensibility.execution" />
         <PackageReference Include="xunit.runner.visualstudio">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
