--- a/.github/workflows/deploy-packages.yml
+++ b/.github/workflows/deploy-packages.yml
@@ -2,7 +2,7 @@ name: Deploy Packages
 
 on:
   push:
-    branches: [ release/nuget ]
+    branches: [release/nuget]
 
 env:
   DOTNET_NOLOGO: true
@@ -11,47 +11,47 @@ jobs:
   build:
     runs-on: windows-latest
     steps:
-    - name: Get code
-      uses: actions/checkout@v5
-      with:
-        fetch-depth: 0 # We need the full history in order to use Git versioning
+      - name: Get code
+        uses: actions/checkout@v5
+        with:
+          fetch-depth: 0 # We need the full history in order to use Git versioning
 
-    - name: Get .NET
-      uses: actions/setup-dotnet@v5
-      with:
-        dotnet-version: '8.0.*'
+      - name: Get .NET
+        uses: actions/setup-dotnet@v5
+        with:
+          dotnet-version: "8.0.*"
 
-    - name: Run tests
-      run: |
-        cd src/
-        dotnet test
+      - name: Run tests
+        run: |
+          cd src/
+          dotnet test
 
-    - name: Build packages
-      run: |
-        cd src/
-        dotnet publish /p:SourceRevisionId=${{ github.sha }}
+      - name: Build packages
+        run: |
+          cd src/
+          dotnet publish /p:SourceRevisionId=${{ github.sha }}
 
-    - name: Upload build
-      uses: actions/upload-artifact@v5
-      with:
-        name: bin
-        path: .artifacts/package
+      - name: Upload build
+        uses: actions/upload-artifact@v4
+        with:
+          name: bin
+          path: .artifacts/package
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
-    - name: Get .NET
-      uses: actions/setup-dotnet@v5
-      with:
-        dotnet-version: '8.0.*'
+      - name: Get .NET
+        uses: actions/setup-dotnet@v5
+        with:
+          dotnet-version: "8.0.*"
 
-    - name: Download build
-      uses: actions/download-artifact@v6
-      with:
-        name: bin
-        path: .artifacts/package
+      - name: Download build
+        uses: actions/download-artifact@v5
+        with:
+          name: bin
+          path: .artifacts/package
 
-    - name: dotnet nuget push
-      run: |
-        dotnet nuget push .artifacts/package/*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_ORG_TOKEN }} --skip-duplicate
+      - name: dotnet nuget push
+        run: |
+          dotnet nuget push .artifacts/package/*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_ORG_TOKEN }} --skip-duplicate
