Update DR category [skip ci]

--- a/pipelines/release-pipeline.yml
+++ b/pipelines/release-pipeline.yml
@@ -31,7 +31,7 @@ extends:
             timeoutInMinutes: 0
             templateContext:
               type: releaseJob
-              isProduction: false
+              isProduction: true
               inputs:
                 - input: pipelineArtifact
                   pipeline: "apis-of-dotnet"
