--- a/pipelines/release-pipeline.yml
+++ b/pipelines/release-pipeline.yml
@@ -19,8 +19,8 @@ extends:
   parameters:
     pool:
       name: AzurePipelines-EO
-      image: 1ESPT-Windows2022
-      os: windows
+      image: 1ESPT-Ubuntu22.04
+      os: linux
     stages:
       - stage: DR
         displayName: Deploy to DR
