--- a/pipelines/build-pipeline.yml
+++ b/pipelines/build-pipeline.yml
@@ -32,8 +32,8 @@ extends:
   parameters:
     pool:
       name: AzurePipelines-EO
-      image: 1ESPT-Ubuntu22.04
-      os: linux
+      image: 1ESPT-Windows2022
+      os: windows
     customBuildTags:
       - ES365AIMigrationTooling
     stages:
