--- a/pipelines/build-pipeline.yml
+++ b/pipelines/build-pipeline.yml
@@ -66,7 +66,7 @@ extends:
               - task: ArchiveFiles@2
                 displayName: Create site.zip
                 inputs:
-                  rootFolderOrFile: $(Agent.TempDirectory)/publish
+                  rootFolderOrFile: $(Agent.TempDirectory)/publish/apisof.net
                   includeRootFolder: false
                   archiveType: zip
                   archiveFile: $(build.artifactstagingdirectory)/site.zip
