--- a/pipelines/build-pipeline.yml
+++ b/pipelines/build-pipeline.yml
@@ -62,11 +62,17 @@ extends:
                 inputs:
                   command: publish
                   projects: "src/apisof.net/apisof.net.csproj"
-                  arguments: --configuration $(BuildConfiguration) --output $(Agent.TempDirectory)/publish /p:SourceRevisionId=$(Build.SourceVersion)
-              - task: ArchiveFiles@2
-                displayName: Create site.zip
+                  arguments: --configuration $(BuildConfiguration) --output $(build.artifactstagingdirectory) /p:SourceRevisionId=$(Build.SourceVersion)
+              - task: PowerShell@2
+                displayName: Rename package to site.zip
                 inputs:
-                  rootFolderOrFile: "$(Agent.TempDirectory)/publish/apisof.net"
-                  includeRootFolder: false
-                  archiveType: zip
-                  archiveFile: $(build.artifactstagingdirectory)/site.zip
+                  targetType: inline
+                  script: |
+                    $sourcePath = "$(build.artifactstagingdirectory)\apisof.net.zip"
+                    $targetPath = "$(build.artifactstagingdirectory)\site.zip"
+                    if (Test-Path $sourcePath) {
+                      Rename-Item -Path $sourcePath -NewName "site.zip"
+                      Write-Host "Successfully renamed apisof.net.zip to site.zip"
+                    } else {
+                      Write-Warning "Source file not found: $sourcePath"
+                    }
