Update build and release pipeline

--- a/pipelines/release-pipeline.yml
+++ b/pipelines/release-pipeline.yml
@@ -79,6 +79,7 @@ extends:
               - task: AzureRmWebAppDeployment@4
                 displayName: Deploy to Production
                 inputs:
+                  appType: webAppLinux
                   ConnectedServiceName: dotnetwebsite-azure
                   WebAppName: apisofdotnet
                   Package: $(Pipeline.Workspace)/apis-of-dotnet-drop
