--- a/pipelines/build-pipeline.yml
+++ b/pipelines/build-pipeline.yml
@@ -7,6 +7,10 @@ trigger:
     include:
       - "*"
   paths:
+    include:
+      - pipelines/**
+      - src/apisof.net/**
+      - src/Terrajobst.ApiCatalog/**
     exclude:
       - /.gitignore
       - /.github/*
@@ -26,10 +30,8 @@ extends:
   parameters:
     pool:
       name: AzurePipelines-EO
-      image: 1ESPT-Windows2022
-      os: windows
-    customBuildTags:
-      - ES365AIMigrationTooling
+      image: 1ESPT-Ubuntu22.04
+      os: linux
     stages:
       - stage: stage
         jobs:
@@ -50,23 +52,19 @@ extends:
                 inputs:
                   version: 8.x
                   includePreviewVersions: true
-              - template: pipelines/scripts/nuget_auth.yml@self
-              - task: DotNetCoreCLI@2
-                displayName: Publish Web Application
-                inputs:
-                  command: publish
-                  projects: "src/apisof.net/apisof.net.csproj"
-                  arguments: --output $(build.artifactstagingdirectory) /p:SourceRevisionId=$(Build.SourceVersion)
-              - task: PowerShell@2
-                displayName: Rename package to site.zip
-                inputs:
-                  targetType: inline
-                  script: |
-                    $sourcePath = "$(build.artifactstagingdirectory)\apisof.net.zip"
-                    $targetPath = "$(build.artifactstagingdirectory)\site.zip"
-                    if (Test-Path $sourcePath) {
-                      Rename-Item -Path $sourcePath -NewName "site.zip"
-                      Write-Host "Successfully renamed apisof.net.zip to site.zip"
-                    } else {
-                      Write-Warning "Source file not found: $sourcePath"
-                    }
+              - script: |
+                  cd src/apisof.net
+                  dotnet clean
+                  dotnet restore
+                  dotnet publish apisof.net.csproj -r linux-x64 --self-contained false -o "$(build.artifactstagingdirectory)" /p:SourceRevisionId=$(Build.SourceVersion)
+                displayName: "Publish Web Application"
+              - script: |
+                  sourcePath="$(build.artifactstagingdirectory)/apisof.net.zip"
+                  targetPath="$(build.artifactstagingdirectory)/site.zip"
+                  if [ -f "$sourcePath" ]; then
+                    mv "$sourcePath" "$targetPath"
+                    echo "Successfully renamed apisof.net.zip to site.zip"
+                  else
+                    echo "Warning: Source file not found: $sourcePath"
+                  fi
+                displayName: "Rename package to site.zip"
