--- a/pipelines/release-pipeline.yml
+++ b/pipelines/release-pipeline.yml
@@ -22,31 +22,31 @@ extends:
       image: 1ESPT-Ubuntu22.04
       os: linux
     stages:
-      - stage: DR
-        displayName: Deploy to DR
-        jobs:
-          - job: Job_1
-            displayName: Run on agent
-            condition: succeeded()
-            timeoutInMinutes: 0
-            templateContext:
-              type: releaseJob
-              isProduction: true
-              inputs:
-                - input: pipelineArtifact
-                  pipeline: "apis-of-dotnet"
-                  artifactName: "apis-of-dotnet-drop"
-                  targetPath: "$(Pipeline.Workspace)/apis-of-dotnet-drop"
-            steps:
-              - task: AzureRmWebAppDeployment@4
-                displayName: Deploy to DR
-                inputs:
-                  ConnectedServiceName: dotnetwebsite-azure
-                  WebAppName: apisofdotnet-dr
-                  Package: $(Pipeline.Workspace)/apis-of-dotnet-drop
+      # - stage: DR
+      #   displayName: Deploy to DR
+      #   jobs:
+      #     - job: Job_1
+      #       displayName: Run on agent
+      #       condition: succeeded()
+      #       timeoutInMinutes: 0
+      #       templateContext:
+      #         type: releaseJob
+      #         isProduction: true
+      #         inputs:
+      #           - input: pipelineArtifact
+      #             pipeline: "apis-of-dotnet"
+      #             artifactName: "apis-of-dotnet-drop"
+      #             targetPath: "$(Pipeline.Workspace)/apis-of-dotnet-drop"
+      #       steps:
+      #         - task: AzureRmWebAppDeployment@4
+      #           displayName: Deploy to DR
+      #           inputs:
+      #             ConnectedServiceName: dotnetwebsite-azure
+      #             WebAppName: apisofdotnet-dr
+      #             Package: $(Pipeline.Workspace)/apis-of-dotnet-drop
       - stage: Production
         displayName: Deploy to Production
-        dependsOn: DR
+        # dependsOn: DR
         jobs:
           - job: PreDeploymentApprovalJob
             displayName: Pre-Deployment Approval
